--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ table {
 }
 
 .day-header{
-    background-color: #f3fff3;
+    background-color: #31426d;
 }
 
 td,th {
@@ -58,7 +58,7 @@ td,th {
 }
 th {
     padding: 10px;
-    /* background-color: #000000;
+    /* background-color: #31426d;
     color: #fff; */
     /* font-weight: normal; */
 }
